Fix code tags overflowing container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ body.dark {
   }
 
   :not(pre) > code {
-    @apply px-1 font-bold;
+    @apply break-words px-1 font-bold;
   }
 
   :not(pre) > code::before,
